[gd_scene load_steps=4 format=3 uid="uid://ev1evps5jo65"]

[ext_resource type="Script" path="res://scenes/maps/rooms/room.gd" id="1_fqah2"]
[ext_resource type="PackedScene" uid="uid://b1lad01hrhekf" path="res://assets/blender/genericRoom.blend" id="2_1e70y"]
[ext_resource type="PackedScene" uid="uid://cwyov7xrflt4f" path="res://assets/blender/genericWall.blend" id="3_116cu"]

[node name="Room" type="Node3D"]
script = ExtResource("1_fqah2")

[node name="GenericRoom" parent="." instance=ExtResource("2_1e70y")]

[node name="TopWall" parent="." instance=ExtResource("3_116cu")]

[node name="LeftWall" parent="." instance=ExtResource("3_116cu")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="RightWall" parent="." instance=ExtResource("3_116cu")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)

[node name="BottomWall" parent="." instance=ExtResource("3_116cu")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
